feat: Complete backend infrastructure before Cognito authorizer migration
- ✅ Backend 100% functional with EventBridge + AI + Thumbnails
- ✅ All Lambdas using cognito_sub UUID consistently
- ✅ Complete upload flow: S3 → EventBridge → AI → SQS → Thumbnails
- ✅ API endpoints ready: auth, upload, media retrieval
- ✅ CORS configured and working
- ✅ Infrastructure web complete (CloudFront + Amplify + Route53)

Components ready for Cognito authorizer:
- user-crud v16: Cognito sub UUID fix applied
- media-processor v15: EventBridge + AI + SQS integration
- upload-handler v1: Multipart upload + temp file handling
- thumbnail-generator v8: Klayers Pillow + WebP generation
- media-retrieval v2: CORS + consistent sub extraction

Next: Migrate from Firebase JWT authorizer to Cognito native authorizer

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-error.log
+# Lambda Dependencies - Heavy Files
+**/lambda-pillow-*.zip
+**/pillow-layer.zip
+**/PIL/
+**/Pillow.libs/
+**/python/
 
-# Terraform
-.terraform
-*.tfstate
-*.tfstate.backup
+# Terraform & Terragrunt
+**/.terraform/
+**/.terraform.lock.hcl
+**/.terragrunt-cache/
+**/terraform.tfstate*
 
-# Terragrunt
-.terragrunt-cache
+# Test Files
+test-*.sh
+/tmp/
 
-# OS X
-.history
+# macOS
 .DS_Store
 
-# IntelliJ
-.idea_modules
-*.iml
-*.iws
-*.ipr
+# IDE
+.vscode/
 .idea/
-build/
-*/build/
-out/
-cost*
+
+# Logs
+*.log
